The cards autoload a pair of random images every  resy restart event

--- a/index.html
+++ b/index.html
@@ -15,78 +15,72 @@
     <div class="container d-flex h-100">
         <div class="row d-flex justify-content-center">
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="1">
-                    <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/covid.png" />
+                <div class="img-container hvr-grow-shadow">
+                    <img class="mx-auto" src="media/code-signs.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="2">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/covid.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="3">
+                <div class="img-container hvr-grow-shadow" >
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/no-vaccines.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="4">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/no-vaccines.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="5">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/syringe.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="6">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/syringe.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="7">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/vaccination card.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="8">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/vaccination card.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="9">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/shield.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="10">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/shield.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="11">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/vaccine.png" />
                 </div>
             </div>
             <div class="col-4 my-4 d-flex justify-content-center">
-                <div class="img-container hvr-grow-shadow" id="12">
+                <div class="img-container hvr-grow-shadow">
                     <img class="mx-auto back" src="media/code-signs.png" />
-                    <img class="mx-auto front" src="media/vaccine.png" />
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <button onclick="restart()">Reiniciar</button>
+            </div>
+        </div>
+
     </div>
     <script src="scripts.js"></script>
 </body>
