--- a/index.html
+++ b/index.html
@@ -14,64 +14,64 @@
 <body>
     <div class="container d-flex h-100">
         <div class="row d-flex justify-content-center">
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto" src="media/code-signs.png" />
+                    <img class="card-item mx-auto" src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow" >
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
-            <div class="col-4 my-4 d-flex justify-content-center">
+            <div class="col-md-3 col-sm-3 col-6  my-4 d-flex justify-content-center">
                 <div class="img-container hvr-grow-shadow">
-                    <img class="mx-auto back" src="media/code-signs.png" />
+                    <img class="card-item mx-auto " src="media/code-signs.png" />
                 </div>
             </div>
         </div>
